--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -29,14 +29,14 @@ const i18n = getI18n({ currentLocale })
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		width: calc(100% - 2em);
+		width: calc(100svw - 2em);
 		max-width: calc(var(--maxWidth) - 2em);
 		height: 3.5rem;
 		margin: 1em auto 0 auto;
 		border-radius: var(--borderRadius);
-		background-color: #bbb9b920;
+		background-color: #8b8a8a30;
 		border: 1px solid var(--borderColor);
-		backdrop-filter: blur(10px);
+		backdrop-filter: blur(30px);
 		z-index: 5;
 
 		& .header_options {
