--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,6 +17,10 @@ const { title, description } = Astro.props
 		<meta charset="UTF-8" />
 		<meta name="description" content={description} />
 		<meta name="viewport" content="width=device-width" />
+		<meta
+			name="image"
+			content="https://raw.githubusercontent.com/AletzMan/ImagesStorage/7d05f78abc182dcd7aaf1ed1aafc3876cf80a250/portfolio/mainimage.jpg"
+		/>
 		<link rel="icon" type="image/png" href="/favicon.png" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
