Change meta property image image open graph

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,7 @@ const { title, description } = Astro.props
 		<meta name="description" content={description} />
 		<meta name="viewport" content="width=device-width" />
 		<meta
-			name="image"
+			name="og:image"
 			content="https://raw.githubusercontent.com/AletzMan/ImagesStorage/7d05f78abc182dcd7aaf1ed1aafc3876cf80a250/portfolio/mainimage.jpg"
 		/>
 		<link rel="icon" type="image/png" href="/favicon.png" />
