Update: modify position

--- a/src/components/ButtonLanguage.astro
+++ b/src/components/ButtonLanguage.astro
@@ -12,12 +12,15 @@
 
 <style>
 	#languageToggle {
-		position: relative;
+		position: absolute;
+		top: 1.5em;
+		right: -0.75em;
 		border: 0;
 		background: none;
 		cursor: pointer;
 		border: 1px solid var(--borderColor);
 		border-radius: 3em;
+		pointer-events: all;
 	}
 
 	.tagLanguage {
