Update: change view display

--- a/src/components/Projects/Projects.astro
+++ b/src/components/Projects/Projects.astro
@@ -21,9 +21,11 @@ const translations: Ii18n = i18n as Ii18n
 		display: flex;
 		flex-flow: row wrap;
 		justify-content: space-between;
+		justify-content: center;
 		column-gap: 1em;
 		row-gap: 3em;
 		width: 100%;
+		max-width: var(--maxWidth);
 		padding: 6em 0 1em 0;
 
 		@media (width < 655px) {
