Update:  change the placement of the attachment point

--- a/src/components/Experience/SingleExperience.astro
+++ b/src/components/Experience/SingleExperience.astro
@@ -237,19 +237,19 @@ const { experienceDescription } = Astro.props
 
 	.timeline_point-left {
 		top: 0.15em;
-		right: -2.05em;
+		right: -2em;
 
 		@media (width < 1250px) {
-			right: -29.75%;
+			/*right: -29.75%;*/
 		}
 	}
 
 	.timeline_point-right {
 		top: 0.15em;
-		left: -2.05em;
+		left: -2em;
 
 		@media (width < 1250px) {
-			left: -29.75%;
+			/*left: -29.75%;*/
 		}
 	}
 
