--- a/src/components/App.astro
+++ b/src/components/App.astro
@@ -61,7 +61,7 @@ const translations: Ii18n = i18n as Ii18n
 	.workView {
 		position: fixed;
 		top: 0;
-		display: grid;
+		display: none;
 		grid-template-columns: 1.5em 1fr 1.5em;
 		grid-template-rows: 1.5em 1fr;
 		place-items: center center;
@@ -147,7 +147,8 @@ const translations: Ii18n = i18n as Ii18n
 		grid-row: 2 / 3;
 		padding: 0.5em;
 		width: 100%;
-		height: 100%;
+		max-height: calc(100svh - 6em);
+
 		/*background-color: red;*/
 		overflow: hidden;
 	}
@@ -155,7 +156,8 @@ const translations: Ii18n = i18n as Ii18n
 	.imageWork {
 		object-fit: cover;
 		padding: 0.5em;
-		max-width: calc(100svw - 2em);
+		max-width: calc(100svw - 4em);
+		max-height: calc(100svh - 6em);
 		border: 2px solid rgb(239, 239, 239);
 		background: linear-gradient(#0ebbdd, #29f29c);
 		box-shadow:
